--- a/client/src/views/Home/Clients/styles.scss
+++ b/client/src/views/Home/Clients/styles.scss
@@ -1,31 +1,41 @@
 @import '~base-scss/base';
 
-.clients-section{
+.clients-section {
     position: relative;
-    background-color: #555555;
-    .overlay-block{
+    background-color: $color-foreground-dark-alt;
+    
+    .overlay-block {
         position: absolute;
         bottom: 0;
         left: 0;
         width: 100%;
-        img{
+
+        img {
             width: 100%;
         }
+    }
+
+    .container-block{
+        justify-content: center;
+        padding: $spacing-super-large-alt 0;
+        min-height: 100vh;
     }
     .client-list {
         display: flex;
         align-items: center;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: center;
     
         .client {
-            padding: 24px;
-            .client-inner{
-                background-color: #707070;
-                padding: 25px;
+            padding: $spacing-large-alt;
+
+            .client-inner {
+                background-color: $color-background-overlay-alt;
+                padding: $spacing-large-alt;
+
                 img {
-                    width: 180px;
-                    height: 120px;
+                    width: 144px;
+                    height: 64px;
                     object-fit: contain;
                     object-position: center center;
                 }
@@ -37,8 +47,9 @@
 
 @media screen and (max-width: 720px) {
     .client-list {
+        
         .client {
-            padding: 8px 12px;
+            padding: $spacing-small-alt $spacing-medium-alt;
 
             img {
                 width: 150px;
