--- a/client/src/stylesheets/_colors.scss
+++ b/client/src/stylesheets/_colors.scss
@@ -1,7 +1,7 @@
 $theme-type-light: 'light';
 $theme-type-dark: 'dark';
 
-$theme-type: $theme-type-light;
+$theme-type: $theme-type-dark;
 
 @function get-color($color-light, $color-dark) {
     @if ($theme-type == $theme-type-dark) {
@@ -12,15 +12,15 @@ $theme-type: $theme-type-light;
 }
 
 $color-text-on-light: rgba(0, 0, 0, .8);
-$color-text-on-dark: rgba(255, 255, 255, .8);
+$color-text-on-dark: #fff;
 $color-text: get-color($color-text-on-light, $color-text-on-dark);
 
 $color-text-placeholder-on-light: rgba(0, 0, 0, .4);
-$color-text-placeholder-on-dark: rgba(255, 255, 255, .3);
+$color-text-placeholder-on-dark: rgba(255, 255, 255, .8);
 $color-text-placeholder: get-color($color-text-placeholder-on-light, $color-text-placeholder-on-dark);
 
 $color-text-disabled-on-light: rgba(0, 0, 0, .3);
-$color-text-disabled-on-dark: rgba(255, 255, 255, .2);
+$color-text-disabled-on-dark: rgba(255, 255, 255, .5);
 $color-text-disabled: get-color($color-text-disabled-on-light, $color-text-disabled-on-dark);
 
 $color-text-label-on-light: rgba(0, 0, 0, .6);
@@ -31,7 +31,7 @@ $color-primary-light: #000;
 $color-primary-dark: #4ce49c;
 $color-primary: get-color($color-primary-light, $color-primary-dark);
 
-$color-accent-light: #e74c3c;
+$color-accent-light: #f15928;
 $color-accent-dark: #c34176;
 $color-accent: get-color($color-accent-light, $color-accent-dark);
 
@@ -56,15 +56,23 @@ $color-background-dark: #000;
 $color-background: get-color($color-background-light, $color-background-dark);
 
 $color-background-light-alt: #eee;
-$color-background-dark-alt: #313131;
+$color-background-dark-alt: #3c3c3c;
 $color-background-alt: get-color($color-background-light-alt, $color-background-dark-alt);
 
+$color-background-overlay-light: rgba(0, 0, 0, 0.7);
+$color-background-overlay-dark: #252525;
+$color-background-overlay: get-color($color-background-overlay-light, $color-background-overlay-dark);
+
+$color-background-overlay-light-alt: rgba(0, 0, 0, 0.6);
+$color-background-overlay-dark-alt: #707070;
+$color-background-overlay-alt: get-color($color-background-overlay-light-alt, $color-background-overlay-dark-alt);
+
 $color-foreground-light: #fff;
-$color-foreground-dark: #414141;
+$color-foreground-dark: #464646;
 $color-foreground: get-color($color-foreground-light, $color-foreground-dark);
 
 $color-foreground-light-alt: #f9f9f9;
-$color-foreground-dark-alt: #484848;
+$color-foreground-dark-alt: #555555;
 $color-foreground-alt: get-color($color-foreground-light-alt, $color-foreground-dark-alt);
 
 $color-background-header-light: #f0f5f5;
