--- a/client/src/views/Home/Team/styles.scss
+++ b/client/src/views/Home/Team/styles.scss
@@ -1,21 +1,30 @@
 @import '~base-scss/base';
 
-.team-section{
+.team-section {
     position: relative;
-    background-color: #707070;
+    background-color: $color-foreground;
     overflow: hidden;
+    .container-block{
+        justify-content: center;
+        padding: $spacing-super-large-alt 0;
+        min-height: 100vh;
+    }
 
-    .overlay-block{
+    .overlay-block {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
+        height: 100%;
         text-align: center;
-        img{
+
+        img {
             opacity: 0.5;
-            width: 100%;
+            min-width: 100%;
+            min-height: 100%;
         }
     }
+    
     .members {
         display: flex;
         flex-wrap: wrap;
