Class concatenation using fujs instead of template literals

--- a/client/src/views/Home/Team/Member/styles.scss
+++ b/client/src/views/Home/Team/Member/styles.scss
@@ -31,7 +31,12 @@
         .links {
 
             .link {
+                transition: color 0.5s ease;
                 padding-right: $spacing-small;
+
+                &:hover{
+                    color: $color-background-dark;
+                }
             }
         }
     }
