--- a/client/src/views/Home/Clients/styles.scss
+++ b/client/src/views/Home/Clients/styles.scss
@@ -31,7 +31,7 @@
 
             .client-inner {
                 background-color: $color-background-overlay-alt;
-                padding: $spacing-large-alt;
+                padding: $spacing-extra-large-alt;
 
                 img {
                     width: 144px;
