--- a/client/src/views/Home/Services/styles.scss
+++ b/client/src/views/Home/Services/styles.scss
@@ -13,6 +13,10 @@
         flex-wrap: wrap;
         justify-content: center;
         font-size: $font-size-extra-large;
+
+        @media screen and (max-width: 480px){
+            font-size: $font-size-large;
+        }
     
         .service {
             display: flex;
@@ -21,14 +25,7 @@
             margin-bottom: $spacing-super-large-alt;
             padding: 0 $spacing-medium-alt;
             width: $width-login-form;
-            text-align: center;                                                                                                                                                                                                                                
-            
-            &:first-child{
-                padding-left: 0;
-            }
-            &:last-child{
-                padding-right: 0;
-            }
+            text-align: center;
             
             .services-inner{
                 background-color: $color-background-overlay-dark;
