--- a/client/src/stylesheets/_dimens.scss
+++ b/client/src/stylesheets/_dimens.scss
@@ -103,3 +103,10 @@ $duration-transition-medium: .2s;
 $duration-transition-fast: .1s;
 
 $width-input-min: 180px;
+
+$width-device-desktop: 1024px;
+$width-device-tablet: 768px;
+$width-device-phablet: 720px;
+$width-device-mobile-large: 854px;
+$width-device-mobile-medium: 545px;
+$width-device-mobile-small: 480px;
