--- a/client/src/views/Home/Clients/styles.scss
+++ b/client/src/views/Home/Clients/styles.scss
@@ -45,7 +45,7 @@
 }
 
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: $width-device-phablet) {
     .client-list {
         
         .client {
