--- a/client/src/views/Home/Services/styles.scss
+++ b/client/src/views/Home/Services/styles.scss
@@ -14,7 +14,7 @@
         justify-content: center;
         font-size: $font-size-extra-large;
 
-        @media screen and (max-width: 480px){
+        @media screen and (max-width: $width-device-mobile-small){
             font-size: $font-size-large;
         }
     
