--- a/client/src/views/Career/CareerItem/styles.scss
+++ b/client/src/views/Career/CareerItem/styles.scss
@@ -5,6 +5,9 @@
         display: flex;
         align-items: center;
         padding: $spacing-large;
+        width: 100%;
+        text-transform: unset;
+        font-size: unset;
 
         &:last-child {
             border-bottom: $width-separator-thin solid $color-separator;
