--- a/client/src/views/Career/styles.scss
+++ b/client/src/views/Career/styles.scss
@@ -68,6 +68,7 @@
 
     .content {
         display: flex;
+        position: relative;
         flex-direction: column;
         flex-grow: 1;
         width: 100vw;
