--- a/client/src/views/Home/styles.scss
+++ b/client/src/views/Home/styles.scss
@@ -43,11 +43,11 @@
         flex-direction: row;
         flex-grow: 1;
         z-index: 10;
-        background-color: #ffffff;
+        background-color: #f9ece5;
         padding: 48px 0;
 
         &:nth-child(even) {
-            background-color: #f5f5f5;
+            background-color: #fff;
         }
 
         &.header {
@@ -69,6 +69,11 @@
                     justify-content: center;
                     margin-top: -10vh;
 
+                    .logo {
+                        width: 420px;
+                        height: auto;
+                    }
+
                     .pre-message {
                         margin: 0;
                         font-size: 3vh;
@@ -80,18 +85,6 @@
                         color: $color-text-label;
                         font-size: 4vh;
                         font-weight: $font-weight-light;
-                    }
-
-                    h1 {
-                        margin: 0;
-                        padding: 0;
-                        text-transform: lowercase;
-                        line-height: 1;
-                        font-size: 10vh;
-
-                        span:last-child {
-                            color: $color-accent;
-                        }
                     }
                 }
             }
@@ -204,8 +197,8 @@
                             font-size: 32px;
                         }
 
-                        h1 {
-                            font-size: 64px;
+                        .logo {
+                            width: 80vw;
                         }
                     }
                 }
